
[package]
name = "dfs-client"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
ring = "0.17.8"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4"
serde_json = "1.0.134"
native-dialog = "0.7.0"
tonic = "0.14.1"
prost = "0.14.1"
futures = "0.3"
tokio-stream = "0.1"
tonic-prost = "0.14.1"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4.39"
prost-types = "0.13"
uuid = "1.16.0"
log = "0.4.27"
rand = "0.9.2"
env_logger = "0.11.8"


[build-dependencies]
tonic-prost-build = "0.14.1"

